--- a/test.ipynb
+++ b/test.ipynb
@@ -10,12 +10,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2-final"
+   "version": "3.8.8-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.9.2 64-bit ('discord': conda)",
+   "display_name": "Python 3.8.8 64-bit ('discord': conda)",
    "metadata": {
     "interpreter": {
      "hash": "6c15fef4c52658d29d29203a4c29113b94565725e0bdb0fff8a05282e69a4031"
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 1
+     "execution_count": 4
     }
    ],
    "source": [
@@ -50,6 +50,8 @@
     "from discord.ext import commands\n",
     "import pymongo\n",
     "from pymongo import MongoClient\n",
+    "import datetime\n",
+    "import time\n",
     "\n",
     "load_dotenv()"
    ]
@@ -214,6 +216,97 @@
     "print(type(\"asdf\"))\n",
     "if type(\"234\") == \"<class 'str'>\":\n",
     "    print(\"nice\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "AttributeError",
+     "evalue": "'numpy.ndarray' object has no attribute 'pop'",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-8c259e30b0fc>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mtest\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mones\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mtest\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'pop'"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "test = np.ones(2)\n",
+    "test.pop(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "1\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "-5"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 8
+    }
+   ],
+   "source": [
+    "time_offset = -time.timezone\n",
+    "print(time.daylight)\n",
+    "round(time_offset / (60 * 60))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "-4\n"
+     ]
+    }
+   ],
+   "source": [
+    "time_offset = -time.timezone\n",
+    "is_dst = time.daylight and time.localtime().tm_isdst > 0\n",
+    "LOCAL_OFFSET = round(time_offset / (60 * 60)) + is_dst\n",
+    "print(LOCAL_OFFSET)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "amer\n"
+     ]
+    }
+   ],
+   "source": [
+    "teststring = \"gamer\"\n",
+    "teststring = teststring[1:]\n",
+    "print(teststring)"
    ]
   }
  ]
